# v

./: .gitignore
lpu/: README.md  lpu.py  pyproject.toml
lpu/conf/: example.config.toml  example.frpc.toml  example.go2rtc.yaml  lpu-core.service  lpu-frpc.service
lpu/snapshot/: snapshot.sh
lpu/views/: ais.html  base.html  index.html
lpu/views/static/: lite.css  lite.js  video-rtc.js
server/: Caddyfile  go.mod  main.go
server/ais-faker/: README.md  aisraw.csv  faker.py  pyproject.toml  tcpc.sh  tcpraw.py  tcpraw.sh
